# fga-basecamp-mcp

./: .gitignore  CLAUDE.md  pyproject.toml
src/basecamp_mcp/: __init__.py  auth.py  client.py  config.py  server.py
