[project]
name = "basecamp-mcp"
version = "0.2.1"
description = "Basecamp MCP server for Claude — read and search Basecamp with your own API access"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["basecamp", "mcp", "claude", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
basecamp-mcp = "basecamp_mcp.server:main"

[project.urls]
Homepage = "https://github.com/jacobfiler/basecamp-mcp"
Issues = "https://github.com/jacobfiler/basecamp-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
